# meetup-client

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
meetup/client/: __init__.py  client.py
meetup_client/: __init__.py  client.py  errors.py
notebooks/: example.py
tests/: conftest.py  test_dummy.py  test_get.py  test_scan.py
tests/cassettes/test_get[pro/pydata/: groups-kwargs0].yaml
tests/cassettes/test_get_1[PyData-Suedwest/: events-kwargs0].yaml
tests/cassettes/test_get_1[pro/pydata/: groups-kwargs0].yaml
tests/cassettes/test_get_2[PyData-Suedwest/: events-kwargs0].yaml
tests/cassettes/test_get_2[pro/pydata/: groups-kwargs0].yaml
tests/cassettes/test_get_bad_request_1[pro/pydata/: groups-kwargs0].yaml
tests/cassettes/test_get_unauthorized[PyData-Suedwest/: events-kwargs0].yaml
tests/cassettes/test_get_unauthorized[pro/pydata/: groups-kwargs0].yaml
tests/cassettes/test_scan_1[PyData-Suedwest/: events-kwargs1].yaml  members-kwargs0].yaml
tests/cassettes/test_scan_2[PyData-Suedwest/: events-kwargs1].yaml  members-kwargs0].yaml
tests/cassettes/test_scan_unauthorized[PyData-Suedwest/: members-kwargs0].yaml
