     [tool.poetry]
name = "meetup-client"
version = "0.1.0"
description = "A Python client for the Meetup API."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
readme = "README.md"
repository = "https://github.com/janjagusch/meetup-client"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
pandas = "^0.25.3"
tqdm = "^4.38"

[tool.poetry.dev-dependencies]
black = {version="19.10b0", allows-prereleases=true}
ipykernel = "^5"
pylint = "^2"
pytest = "^5"
python-dotenv = "^0.10.3"
tox = "^3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
