[tool.poetry]
name = "meetup-client"
version = "0.1.0"
description = "A Python client for the Meetup API."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
readme = "README.md"
repository = "https://github.com/janjagusch/meetup-client"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
pandas = "^0.25.3"
tqdm = "^4.38"

[tool.poetry.dev-dependencies]
black = {version="19.10b0", allow-prereleases=true}
codecov = "^2.0"
ipykernel = "^5"
pylint = "^2"
pytest = "^5"
pytest-cov = "^2.8"
pytest-vcr = "^1.0"
python-dotenv = "^0.10.3"
tox = "^3"
PyYAML = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
